--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react18-input-otp": "^1.1.2"
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
