--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "rimraf dist && npx tsc",
+    "build": "rimraf dist && npx tsc && tsc-alias",
     "prestart": "npm run build",
     "start": "node dist/app.js",
-    "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc -w\" \"nodemon dist/app.js\"",
+    "serve": "ts-node-dev -r tsconfig-paths/register app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,7 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -29,6 +27,9 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.14.0",
     "nodemon": "^2.0.20",
+    "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.2",
+    "tsconfig-paths": "^3.14.2",
     "typescript": "^4.9.5"
   }
 }
