--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,14 +18,11 @@
     "types": ["node"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*", "./build/*", ""],
-      "components/*": ["src/components/*"],
-      "forms/*": ["src/components/forms/*"],
-      "layout/*": ["src/components/layout/*"],
-      "pages/*": ["src/pages/*"],
-      "assets/*": ["src/assets/*"],
-      "apis/*": ["src/apis/*"],
-      "redux/*": ["src/redux/*"]
+      "@apis/*": ["src/apis/*"],
+      "@assets/*": ["src/assets/*"],
+      "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
+      "@redux/*": ["src/redux/*"]
     }
   },
   "include": ["src"],
