--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
+    "@hookform/resolvers": "^2.9.11",
+    "@react-oauth/google": "^0.8.0",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react18-input-otp": "^1.1.2",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
