--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-auth-library": "^8.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "rimraf": "^4.1.2"
   },
@@ -26,6 +29,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.0",
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
